// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oracle query dimensions: dimensions 1`] = `
Array [
  Object {
    "Orders.status": "new",
  },
  Object {
    "Orders.status": "new",
  },
  Object {
    "Orders.status": "processed",
  },
  Object {
    "Orders.status": "processed",
  },
  Object {
    "Orders.status": "shipped",
  },
]
`;

exports[`oracle query dimensions: dimensions 2`] = `
Array [
  Object {
    "Orders.status": "new",
  },
  Object {
    "Orders.status": "new",
  },
  Object {
    "Orders.status": "processed",
  },
  Object {
    "Orders.status": "processed",
  },
  Object {
    "Orders.status": "shipped",
  },
]
`;

exports[`oracle query measure: query 1`] = `
Array [
  Object {
    "Orders.totalAmount": 1700,
  },
]
`;
